--- a/page3.html
+++ b/page3.html
@@ -28,7 +28,7 @@
             <ol>
                 <li>Deadpool</li>
                     (This is the link of
-                    <a href="https://en.wikipedia.org/wiki/Deadpool_(film)" target="_blank">Movie).</a>
+                    <a href="https://en.wikipedia.org/wiki/Deadpool_(film)" target="_blank">Movie</a>).
                 <li>Now you see me</li>
                     (This is
                     <a href="https://en.wikipedia.org/wiki/Now_You_See_Me_(film)" target="_blank">the link of Movie).</a>
